namespace Application.Catalogs.Models.CreateCatalog;

public sealed record CreateCatalogResponse(int Id);